Finished evaluateTime() feasibility check